# procman

./: .gitignore  CMakeLists.txt  README.markdown  README.md  conanfile.py
doc/: CMakeLists.txt  doxygen  doxygen.cmake  index.h
include/: procman.hpp
src/: procman.cpp  procman_config.cfg
test/: CMakeLists.txt  test.cpp  test_proc_builder.hpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
